--- a/lectures/00_intro.ipynb
+++ b/lectures/00_intro.ipynb
@@ -53,11 +53,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -85,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -110,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -121,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -137,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -147,7 +146,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Environmental data can be a mess.\n",
     "![env-data-mess2.png](assets/env-data-mess2.png)"
@@ -155,7 +158,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Human data can be a mess.\n",
     "![hum-data-mess.png](assets/hum-data-mess.png)\n",
@@ -168,7 +175,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -198,7 +205,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -217,7 +224,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -242,11 +249,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -254,8 +261,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello world!\n",
-      "[from hello_world.py]\n"
+      "Hello world!\r\n",
+      "[from hello_world.py]\r\n"
      ]
     }
    ],
@@ -274,7 +281,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -290,7 +297,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -309,7 +316,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -321,7 +328,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -335,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -355,7 +362,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -370,7 +377,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -401,7 +408,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -415,7 +422,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -427,7 +434,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -438,7 +445,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -452,7 +459,7 @@
    "execution_count": 2,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -489,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -520,7 +527,7 @@
    "execution_count": 4,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -538,7 +545,7 @@
    "execution_count": 5,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -568,7 +575,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -915,7 +922,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -946,7 +953,7 @@
    "execution_count": 8,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -963,7 +970,7 @@
    "execution_count": 9,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -983,7 +990,7 @@
    "execution_count": 10,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -1011,7 +1018,7 @@
    "execution_count": 11,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1041,7 +1048,7 @@
    "execution_count": 12,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1091,7 +1098,7 @@
    "execution_count": 13,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1130,7 +1137,7 @@
    "execution_count": 14,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1188,7 +1195,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -1227,7 +1234,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -1242,7 +1249,23 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Why Open Source Code?\n",
+    "- Join a community \n",
+    "- Free\n",
+    "- The Feds want us to: [TRANSFORM TO OPEN SCIENCE](https://nasa.github.io/Transform-to-Open-Science/)\n",
+    "- Ethical: Reproducable, Transparent, Accessable to All (kinda)\n",
+    "- Resources: Google + Stack Exchange/Overflow \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -1261,16 +1284,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Computer Science 101: WTF is a Computer?\n",
     "![](https://haygot.s3.amazonaws.com/questions/1748734_1823182_ans_da379a0e652445c0a28ba1d393ad0119.png)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Computer Science 101: WTF is a Computer?\n",
     "![Alt text](https://allabouttreasury.com/wp-content/uploads/2021/08/python-code-copiler-machine-code.png)"
@@ -1278,7 +1308,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Computer Science 101: WTF is a Computer?\n",
     "![](https://haygot.s3.amazonaws.com/questions/1748734_1823182_ans_da379a0e652445c0a28ba1d393ad0119.png)"
@@ -1286,7 +1320,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Random Access Memory (RAM) vs. Hard Drive Storage?\n",
     "###  ... I have 64 GB of RAM and 1 TB SSD ... \"WTF does that mean??\"  \n",
@@ -1295,7 +1333,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# RAM \n",
     "![](https://media.geeksforgeeks.org/wp-content/uploads/222-10.png)\n",
@@ -1308,7 +1350,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Hard Drive Storage + File System + CPU/GPU\n",
     "![file-sys1.png](assets/file-sys1.png)"
@@ -1316,7 +1362,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Hard Drive Storage + File System + CPU/GPU\n",
     "![file-sys2.png](assets/file-sys2.png)"
@@ -1324,7 +1374,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Let's Dive Into the Unix Shell\n",
     "\n",
@@ -1337,7 +1391,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Now Let's Install Mini Conda\n",
     "\n",
@@ -1350,7 +1408,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# For Next Week\n",
     "- Relax, you are doing fine, even if you are totally confused. This is how you learn a new language.\n",
