first class ready

--- a/lectures/00_intro.ipynb
+++ b/lectures/00_intro.ipynb
@@ -438,7 +438,7 @@
     }
    },
    "source": [
-    "In general, Python is better for working with APIs, writing maintainable, production-ready code, working with a diverse array of data, and building machine learning or AI workflows."
+    "In general, Python is better for working with APIs (Application Programming Interfaces), writing maintainable, production-ready code, working with a diverse array of data, and building machine learning or AI workflows."
    ]
   },
   {
@@ -451,7 +451,7 @@
    "source": [
     "Both languages can _do_ anything. \n",
     "Most data science teams use both languages.\n",
-    "(and others too.. Matlab, Javascript, Go, Fortran, etc...)"
+    "(and others too: Julia, Matlab, Javascript, Go, Fortran, etc...)"
    ]
   },
   {
@@ -1254,11 +1254,12 @@
    },
    "source": [
     "# Why Open Source Code?\n",
-    "- Join a community \n",
-    "- Free\n",
+    "- Join a global community \n",
+    "- Free knowledge\n",
     "- The Feds want us to: [TRANSFORM TO OPEN SCIENCE](https://nasa.github.io/Transform-to-Open-Science/)\n",
     "- Ethical: Reproducable, Transparent, Accessable to All (kinda)\n",
-    "- Resources: Google + Stack Exchange/Overflow \n"
+    "- Great resources: Google + Stack Exchange/Overflow \n",
+    "- More fun, faster.\n"
    ]
   },
   {
@@ -1340,12 +1341,35 @@
    },
    "source": [
     "# RAM \n",
-    "![](https://media.geeksforgeeks.org/wp-content/uploads/222-10.png)\n",
+    "![](https://media.geeksforgeeks.org/wp-content/uploads/222-10.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# RAM \n",
     "\n",
     "- RAM is literally randomly used within a computer program. \n",
     "- When using data for computation, your CPU gets a pool of RAM that track tracks of during opperations. \n",
     "- The data on this screen is currently \"in memory\" ... until it is released.\n",
     "- More on RAM later, but understanding the basics of RAM is _very important for data science_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# RAM \n",
+    "![](https://media.geeksforgeeks.org/wp-content/uploads/222-10.png)"
    ]
   },
   {
@@ -1401,9 +1425,7 @@
     "\n",
     "- Go here: [https://docs.conda.io/projects/miniconda/en/latest/](https://docs.conda.io/projects/miniconda/en/latest/) and install either the Mac or the Windows version. \n",
     "- While your computer likely already has a version of Python installed, we'll be using Mini Conda to help us keep track of Python for us.\n",
-    "\n",
-    "\n",
-    "#### tl;dr Shell scripts tell your opperating systems what to do instead of using the Graphical User Interface (GUI)\n"
+    "- Mini Conda is a **package manager** ... it keeps track of other code bases so you don't have to."
    ]
   },
   {
