good to go for class 2

--- a/lectures/010_data_101.ipynb
+++ b/lectures/010_data_101.ipynb
@@ -59,7 +59,10 @@
     "1. Github \n",
     "1. Conda Environments\n",
     "1. Computer Science 101 Finish\n",
-    "1. Data Types"
+    "1. Data Types and Variables\n",
+    "1. Lists\n",
+    "1. Controlls (if time)\n",
+    "1. Data Structures (if time)"
    ]
   },
   {
@@ -170,7 +173,7 @@
    "source": [
     "# Unix Commands \n",
     "More useful Unix commands:\n",
-    "1. `cp {file}` = copy\n",
+    "1. `cp {file} {locations}` = copy\n",
     "2. `rm {file}` = remove / delete a file **CAREFUL THIS IS NOT REVERSIBLE** \n",
     "3. `rm -r {file}` = recursively remove (e.g. remove a directory)\n",
     "4. `mv {file} {destination}` = move a file/directory to a new locations\n",
@@ -186,11 +189,12 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "#### <<<< SHOW SHELL ON TEMPEST >>>>"
+    "# Shell on Tempest\n",
+    "Let's check it out!"
    ]
   },
   {
@@ -269,13 +273,6 @@
     "4. Open your shell and type `pip install jupyterlab` ... Now you have  Jupyter\n",
     "5. Go to the location where you want to store the class code and type: `git clone https://github.com/cascadet/GPHY-491-591.git`\n",
     "6. Now create the environment: `conda env create -f environment.yml`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# GET ENV FROM TEMPEST <<<<<<<<<----- "
    ]
   },
   {
