--- a/lectures/011_variables.ipynb
+++ b/lectures/011_variables.ipynb
@@ -8,8 +8,6 @@
     }
    },
    "source": [
-    "| [⬅️ Previous Session](0-2_hello_data_science.ipynb) | [🏠 Course Home](../index.ipynb) |  [🚦 EDS217 Vibes](https://eds217-stoplight.herokuapp.com) | [➡️ Next Session](1-2_lists.ipynb) |\n",
-    "\n",
     "# Interactive Session: Variables & Operators\n",
     "\n",
     "![variables.jpg](assets/variables.jpg)\n",
@@ -601,6 +599,149 @@
    "source": [
     "month_in = input('Month of birth (1-12): ')\n",
     "type(month_in)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"border-top: 0.2px solid gray; margin-top: 12px; margin-bottom: 1px\"></hr>\n",
+    "\n",
+    "### Reserved Key Words\n",
+    "Python has a small number of `key words`, or words that are reserved variables that are native to Python. Key words cannot be used as variables, classes, or functions. Notice that:\n",
+    "```python \n",
+    "and\n",
+    "```\n",
+    "is green and when you try to assign it, Python throws an error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4269637683.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    and = 1\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# try this\n",
+    "and = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['False',\n",
+       " 'None',\n",
+       " 'True',\n",
+       " 'and',\n",
+       " 'as',\n",
+       " 'assert',\n",
+       " 'async',\n",
+       " 'await',\n",
+       " 'break',\n",
+       " 'class',\n",
+       " 'continue',\n",
+       " 'def',\n",
+       " 'del',\n",
+       " 'elif',\n",
+       " 'else',\n",
+       " 'except',\n",
+       " 'finally',\n",
+       " 'for',\n",
+       " 'from',\n",
+       " 'global',\n",
+       " 'if',\n",
+       " 'import',\n",
+       " 'in',\n",
+       " 'is',\n",
+       " 'lambda',\n",
+       " 'nonlocal',\n",
+       " 'not',\n",
+       " 'or',\n",
+       " 'pass',\n",
+       " 'raise',\n",
+       " 'return',\n",
+       " 'try',\n",
+       " 'while',\n",
+       " 'with',\n",
+       " 'yield']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's look at keywords\n",
+    "import keyword\n",
+    "keyword.kwlist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We will learn several key words in this course, but not all of them. They are very useful."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's make some lists \n",
+    "list_1 = [1,2,3,4,5]\n",
+    "list_2 = [11,4,33,4,5]\n",
+    "list_3 = [1,23,3,46,6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Is 1 in our lists?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True 1 is in list_1\n",
+      "False 1 is in list_1\n",
+      "True 1 is in list_1 or list_2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1 in list_1, '1 is in list_1')\n",
+    "print(1 in list_2, '1 is in list_1')\n",
+    "print(1 in list_1 or list_2, '1 is in list_1 or list_2')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More on key words as we continue the course."
    ]
   },
   {
