--- a/lectures/012_lists.ipynb
+++ b/lectures/012_lists.ipynb
@@ -13,8 +13,6 @@
     }
    },
    "source": [
-    "| [⬅️ Previous Session](1-1_variables.ipynb) | [🏠 Course Home](../index.ipynb) |  [🚦 EDS217 Vibes](https://eds217-stoplight.herokuapp.com) | [➡️ Next Session](2-1_control_flow_statements.ipynb) |\n",
-    "\n",
     "\n",
     "# Session 1-2: Lists + Indexing\n",
     "\n",
@@ -242,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,6 +426,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A useful key word is `len`, which will return the number of items in an object.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See how many items are in `colors`:\n",
+    "<div class=\"run\">\n",
+    "    ▶️ <b> Run the cell below. </b>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(colors))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Generating sequential lists\n",
     "Sequential lists are valuable tools, particularly for iteration, which we will explore in the next session. The `range()` function is used to create an iterable object based on the size of an integer argument.\n",
     "\n",
@@ -478,9 +510,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<div class=\"run\">\n",
+    "    ▶️ <b> Run the cell below. </b>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -507,8 +550,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Notice that strings are a squence of characters with a length`\n",
+    "<div class=\"run\">\n",
+    "    ▶️ <b> Run the cell below. </b>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(my_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Because strings are sequences likes lists, they are easy to index and split\n",
     "This makes it useful to access parts of strings for data processing. Let's say you have three files in a folder called `mydata/` and you want to get each file name with a for loop:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"run\">\n",
+    "    ▶️ <b> Run the cell below. </b>\n",
+    "</div>"
    ]
   },
   {
@@ -539,7 +621,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's rename the files:"
+    "Let's rename the files:\n",
+    "\n",
+    "<div class=\"run\">\n",
+    "    ▶️ <b> Run the cells below. </b>\n",
+    "</div>"
    ]
   },
   {
