--- a/labs/GPHY-491-591-Lab1.ipynb
+++ b/labs/GPHY-491-591-Lab1.ipynb
@@ -5,7 +5,7 @@
    "id": "c50d5d6c",
    "metadata": {},
    "source": [
-    "# GPHY 491-591 \n",
+    "# GPHY 491-591 Lab 1\n",
     "Written by Cascade Tuholske, Jan. 2024  \n",
     "\n",
     "### <u> Goals <u>\n",
