--- a/labs/GPHY-491-591-Lab2.ipynb
+++ b/labs/GPHY-491-591-Lab2.ipynb
@@ -54,14 +54,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a3393472",
-   "metadata": {},
-   "source": [
-    "### FIX THIS FOR TEMPEST !!!!!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "e991a6c9",
@@ -80,7 +72,7 @@
    ],
    "source": [
     "# we write file paths and names as their own variables for easy editing\n",
-    "fn = os.path.join('../data/DhsPrevalenceWCovar.csv')\n",
+    "fn = os.path.join('../../GPHY-491-591/data/DhsPrevalenceWCovar.csv')\n",
     "type(fn) # see that our fn is a string, but the os.path.join also helps Python know it's a file path"
    ]
   },
