lab 3 file paths set for tempest

--- a/materials/Day4/GPHY-491-591-Lab3.ipynb
+++ b/materials/Day4/GPHY-491-591-Lab3.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Written by Cascade Tuholske, Jan. 2024\n",
     "\n",
-    "![Richmond](assets/richmond.png)\n",
+    "![Richmond](./assets/richmond.png)\n",
     "\n",
     "## Goals\n",
     "The goal of Lab 3 is to use our new knowledge of `Pandas`, `GeoPandas` and `Rasterio` to create a human-environment geospatial data to investigate the relationship between socioeconomic status, green space, and temperature in Los Angeles, California. In urban areas, the distribution of materials such as asphalt and concrete has been shown to lead to higher surface and air temperatures compared to rural counterparts. This is known as the urban heat island (UHI) effect. High temperatures can be harmful to the health of residents, and in order to mitigate the UHI cities adopt strategies like increasing tree cover to increase shade and cooling, or increasing the reflectivity, also called albedo, with white paint. \n",
@@ -228,7 +228,7 @@
    "outputs": [],
    "source": [
     "# set up your file path\n",
-    "file_path = os.path.join('./data/')"
+    "file_path = os.path.join('/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day4/data/Lab4/')"
    ]
   },
   {
@@ -333,9 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# loop through files and write out csv\n",
@@ -362,7 +360,7 @@
    "outputs": [],
    "source": [
     "# write csv\n",
-    "fn_out = os.path.join(file_path, 'LA-all-SE-data') # SE = socioeconomic\n",
+    "fn_out = os.path.join('./data/', 'LA-all-SE-data') # SE = socioeconomic\n",
     "df_out.to_csv(fn_out+'.csv', index = False)\n",
     "\n",
     "# write shape file\n",
@@ -468,7 +466,7 @@
     "# Set up file paths\n",
     "data_in = os.path.join(file_path, 'landsat/Level1/LC08_L1TP_041036_20200414_20200423_01_T1/')\n",
     "tb_fn = os.path.join(data_in, 'LC08_L1TP_041036_20200414_20200423_01_T1_B10.TIF')\n",
-    "fn_out = os.path.join(file_path, 'interim/TB_20200414.tif')"
+    "fn_out = os.path.join('./data/', 'interim/TB_20200414.tif')"
    ]
   },
   {
@@ -512,7 +510,7 @@
     "# Set up file paths\n",
     "data_in = os.path.join(file_path, 'landsat/Level1/LC08_L1TP_041036_20200820_20200905_01_T1/')\n",
     "tb_fn = os.path.join(data_in, 'LC08_L1TP_041036_20200820_20200905_01_T1_B10.TIF')\n",
-    "fn_out = os.path.join(file_path, 'interim/TB_20200820.tif')"
+    "fn_out = os.path.join('./data/', 'interim/TB_20200820.tif')"
    ]
   },
   {
@@ -531,9 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Make Brightness temp -- 2020-08-20 \n",
@@ -608,27 +604,7 @@
     "# Part 4\n",
     "\n",
     "\n",
-    "![Richmond](assets/ndvi.png)\n",
-    "\n",
-    "The vegetation data will be characterized by the [Normalized Difference Vegetation Index (NDVI)](https://www.usgs.gov/landsat-missions/landsat-normalized-difference-vegetation-index#:~:text=NDVI%20is%20used%20to%20quantify), which is a widely-used measure of “greenness” and higher values of NDVI indicate a greater amount of green vegetation within each neighborhood. From USGS (text is quoted):\n",
-    "\n",
-    "NDVI is used to quantify vegetation greenness and is useful in understanding vegetation density and assessing changes in plant health. NDVI is calculated as a ratio between the red (R) and near infrared (NIR) values in traditional fashion: \n",
-    "    \n",
-    "    (NIR - R) / (NIR + R)\n",
-    "    In Landsat 4-7, NDVI = (Band 4 – Band 3) / (Band 4 + Band 3).\n",
-    "    In Landsat 8-9, NDVI = (Band 5 – Band 4) / (Band 5 + Band 4).\n",
-    "    \n",
-    "Basically, NDVI use the ratio of red and near-red colors to see how green something on the ground is. This is because less green objects tend to dark in the visable R (e.g. absorb a lot of red light) and bright in the NIR (relfect/emit a lot of NIR). That's why the look great to us!\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Part 4\n",
-    "\n",
-    "\n",
-    "![Richmond](assets/ndvi.png)\n",
+    "![Richmond](./assets/ndvi.png)\n",
     "\n",
     "The vegetation data will be characterized by the [Normalized Difference Vegetation Index (NDVI)](https://www.usgs.gov/landsat-missions/landsat-normalized-difference-vegetation-index#:~:text=NDVI%20is%20used%20to%20quantify), which is a widely-used measure of “greenness” and higher values of NDVI indicate a greater amount of green vegetation within each neighborhood. From USGS (text is quoted):\n",
     "\n",
@@ -695,7 +671,7 @@
     "data_in = os.path.join(file_path, 'landsat/Level1/LC08_L1TP_041036_20200820_20200905_01_T1/')\n",
     "b4 = os.path.join(data_in+'LC08_L1TP_041036_20200414_20200423_01_T1_B4.TIF')\n",
     "b5 = os.path.join('LC08_L1TP_041036_20200414_20200423_01_T1_B5.TIF')\n",
-    "fn_out = os.path.join('interim/NDVI_20200414.tif')\n",
+    "fn_out = os.path.join('./data/','NDVI_20200414.tif')\n",
     "ndvi(b4, b5, out)"
    ]
   },
@@ -728,7 +704,7 @@
     "data_in = os.path.join(file_path, 'landsat/Level1/LC08_L1TP_041036_20200820_20200905_01_T1/')\n",
     "b4 = os.path.join(data_in, 'LC08_L1TP_041036_20200820_20200905_01_T1_B4.TIF')\n",
     "b5 = os.path.join(data_in, 'LC08_L1TP_041036_20200820_20200905_01_T1_B5.TIF')\n",
-    "fn_out = os.path.join(file_path, 'interim/NDVI_20200414.tif')\n",
+    "fn_out = os.path.join('./data/','interim/NDVI_20200414.tif')\n",
     "ndvi(b4, b5, out)"
    ]
   },
@@ -937,9 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check out your final data\n",
@@ -953,8 +927,8 @@
    "outputs": [],
    "source": [
     "# Write CSV\n",
-    "fn_out = os.path.join(file_path, 'LA-all-SE-ENV-data')\n",
-    "df_out.to_csv(PATH+fn_out+'.csv', index = False)"
+    "fn_out = os.path.join('./data/','LA-all-SE-ENV-data')\n",
+    "df_out.to_csv(fn_out+'.csv', index = False)"
    ]
   },
   {
@@ -968,7 +942,7 @@
     "gdf_out.rename(columns={'Name':'NEIGHBORHOOD'}, inplace=True) # rename col\n",
     "gdf_out = df_out.merge(gdf_out, on = 'NEIGHBORHOOD', how = 'right') # merge\n",
     "gdf_out = gpd.GeoDataFrame(gdf_out) # cast to GeoPandas DF\n",
-    "gdf_out.to_file(PATH+fn_out+'.shp', index = False) # Write Shape file"
+    "gdf_out.to_file(fn_out+'.shp', index = False) # Write Shape file"
    ]
   },
   {
@@ -1080,9 +1054,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
